src/objects/User_Status__c.object
<CustomObject>
    <description>Used to log sales reps in and out of office for lead round robin</description>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owner_ID__c</fullName>
        <formula>Owner:User.Id</formula>
        <label>Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Round_Robin_Number_Num__c</fullName>
        <formula>VALUE(Round_Robin_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Round Robin Number_Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Round_Robin_Number__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Round Robin Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Round_Robin_Queue__c</fullName>
        <description>The queue user belongs to for Round Robin assignment</description>
        <inlineHelpText>The queue user belongs to for Round Robin assignment</inlineHelpText>
        <label>Round Robin Queue</label>
        <picklist>
            <picklistValues>
                <fullName>Acq Lead Distro Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acquisition Accounts Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC Direct Accounts Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC Enterprise Accounts Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designer AU Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designer Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct AU Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Sales Accounts Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Sales Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Accounts Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Requests Queue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SalesRep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Out of Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In the Office</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>User Status</label>
    <listViews>
        <fullName>Accounts_Queues</fullName>
        <columns>NAME</columns>
        <columns>SalesRep__c</columns>
        <columns>Round_Robin_Queue__c</columns>
        <columns>Status__c</columns>
        <columns>Round_Robin_Number_Num__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Round_Robin_Queue__c</field>
            <operation>contains</operation>
            <value>Account</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In the Office</value>
        </filters>
        <label>Accounts Queues</label>
    </listViews>
    <listViews>
        <fullName>Acquisition_Accounts_Queue</fullName>
        <columns>NAME</columns>
        <columns>SalesRep__c</columns>
        <columns>Status__c</columns>
        <columns>Round_Robin_Number__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Round_Robin_Queue__c</field>
            <operation>equals</operation>
            <value>Acquisition Accounts Queue</value>
        </filters>
        <label>Acquisition Accounts Queue</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SalesRep__c</columns>
        <columns>Round_Robin_Queue__c</columns>
        <columns>Round_Robin_Number__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Designer_AU_Queue</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Round_Robin_Queue__c</columns>
        <columns>Round_Robin_Number__c</columns>
        <columns>Status__c</columns>
        <columns>Owner_ID__c</columns>
        <columns>Department__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In the Office</value>
        </filters>
        <filters>
            <field>Round_Robin_Queue__c</field>
            <operation>equals</operation>
            <value>Designer AU Queue</value>
        </filters>
        <label>Designer AU Queue</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Designer_Queue</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Round_Robin_Queue__c</columns>
        <columns>Round_Robin_Number__c</columns>
        <columns>Status__c</columns>
        <columns>Owner_ID__c</columns>
        <columns>Department__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In the Office</value>
        </filters>
        <filters>
            <field>Round_Robin_Queue__c</field>
            <operation>equals</operation>
            <value>Designer Queue</value>
        </filters>
        <label>Designer Queue</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Direct_AU_Queue</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Round_Robin_Queue__c</columns>
        <columns>Round_Robin_Number__c</columns>
        <columns>Status__c</columns>
        <columns>Owner_ID__c</columns>
        <columns>Department__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In the Office</value>
        </filters>
        <filters>
            <field>Round_Robin_Queue__c</field>
            <operation>equals</operation>
            <value>Direct AU Queue</value>
        </filters>
        <label>Direct AU Queue</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Direct_Sales_Accounts</fullName>
        <columns>NAME</columns>
        <columns>SalesRep__c</columns>
        <columns>Status__c</columns>
        <columns>Round_Robin_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Round_Robin_Queue__c</field>
            <operation>equals</operation>
            <value>Direct Sales Accounts Queue</value>
        </filters>
        <label>Direct Sales Accounts Queue</label>
    </listViews>
    <listViews>
        <fullName>Enterprise_Accounts_Queue</fullName>
        <columns>NAME</columns>
        <columns>SalesRep__c</columns>
        <columns>Status__c</columns>
        <columns>Round_Robin_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Round_Robin_Queue__c</field>
            <operation>equals</operation>
            <value>Enterprise Accounts Queue</value>
        </filters>
        <label>Enterprise Accounts Queue</label>
    </listViews>
    <nameField>
        <displayFormat>US-{0000}</displayFormat>
        <label>User Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Status</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>